feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#40)
* feat: Upgrade to Spring Boot 3.3.11 is implemented.

* chore: Super-linter checkstyle config -  'CustomImportOrder' module is replaced with 'ImportOrder', some classes are slightly changed to check new config.

* fix: META-INF is fixed to ensure auto applying of AtpAuthAutoConfiguration while Spring Application Context is initialized.

* feat: Publishing of Snapshots into GitHub Packages (instead of Maven Central)

* fix: javax.persistence-api:2.2 is replaced to jakarta.persistence-api:3.1.0. Compiler properties are changed to produce pure jdk 21 target. Project version is changed to 2.0.0-SNAPSHOT to separate from versions using Spring Boot 2.x.

* fix(security): Bump dependencies versions: io.undertow to 2.3.21.Final, commons-lang3 to 3.18.0, commons-fileupload to 1.6.0, guava to 32.0.1-jre, lz4-java to 1.10.1. 

* fix: maven-compiler-plugin explicit configuration is fixed to ensure java 21 bytecode version and proper beans naming.

* feat: delete property keycloak.version;

* feat: Spring Boot upgrade to 3.5.11: extra related changes: dependency management is improved (in the most cases trusted to Spring). Bump dependencies: mapstruct to 1.6.3, net.bytebuddy to 1.17.8, maven-compiler-plugin to 3.15.0, maven-surefire-plugin to 3.1.2. Test classes migrated from Junit4 to Jupiter. Clover plugin is removed.

* fix: org.apache.logging.log4j.util.Strings usages are replaced with org.apache.commons.lang3.StringUtils. Some deprecated API usages are removed.

* fix(deps): Bump commons-fileupload version to 1.6.0, exclude too old com.vaadin.external.google:android-json:0.0.20131108.vaadin1 dependency, remove unused commons-fileupload2-jakarta-servlet6. Also: code is cleansed.

* fix(deps): Unify dependencies: bump Spring Boot to 3.5.14, Spring Cloud to 2025.0.2, atp-common to 1.0.0, bouncycastle to 1.84, kafka-clients to 3.9.2, nimbus-jose-jwt to 9.37.4. 

* fix: Incorrect merge from main is fixe